# corsair

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dashboard  docker-compose.yml  requirements.txt
.cargo/: config.toml
.github/workflows/: lint.yml
audits/: sections-16-19-audit.md
config/: corsair_v2_config.yaml  hg_v1_4_paper.yaml  runtime_v3.yaml
docs/: HANDOFF_BAREMETAL_MIGRATION.md  HANDOFF_LATENCY_LEDGER.md  HANDOFF_LATENCY_OPTIMIZATION.md  fpga_arty_a7_feasibility.md  hg_spec_v1.4.md  host_cpu_isolation.md  latency_decomp_results.md
docs/briefs/: crowsnest_inventory_skew_research_2026-04-22.md  directional_feasibility_study.md  thread3_deployment_runbook_2026-04-26.md
docs/research/: improvement_spec_2026-05-05.md
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/corsair_broker/: Cargo.toml
rust/corsair_broker/src/: config.rs  ipc.rs  jsonl.rs  latency.rs  lib.rs  main.rs  notify.rs  runtime.rs  subscriptions.rs  tasks.rs  time.rs  vol_surface.rs
rust/corsair_broker_api/src/: capabilities.rs  contract.rs  events.rs  lib.rs  mock.rs  orders.rs  tick.rs
rust/corsair_broker_ibkr/: Cargo.toml
rust/corsair_broker_ibkr/src/: adapter.rs  bridge.rs  commands.rs  conversion.rs  events.rs  lib.rs
rust/corsair_broker_ibkr_native/: Cargo.toml
rust/corsair_broker_ibkr_native/examples/: account_smoke.rs  broker_smoke.rs  connect_smoke.rs  dump_place_bytes.rs  parse_bench.rs
rust/corsair_broker_ibkr_native/src/: broker.rs  client.rs  codec.rs  decoder.rs  error.rs  lib.rs  messages.rs  place_template.rs  requests.rs  types.rs
rust/corsair_constraint/src/: checker.rs
rust/corsair_hedge/: Cargo.toml
rust/corsair_hedge/src/: fanout.rs  lib.rs  manager.rs  state.rs
rust/corsair_ipc/: Cargo.toml
rust/corsair_ipc/examples/: flatten.rs  inject_place_order.rs  rt_bench.rs
rust/corsair_ipc/src/: cpu_affinity.rs  lib.rs  protocol.rs  ring.rs  server.rs
rust/corsair_market_data/: Cargo.toml
rust/corsair_market_data/src/: lib.rs  option_state.rs  state.rs  view.rs
rust/corsair_oms/: Cargo.toml
rust/corsair_oms/src/: book.rs  lib.rs
rust/corsair_position/src/: market_view.rs  portfolio.rs
rust/corsair_pricing/: Cargo.toml
rust/corsair_pricing/src/: calibrate.rs  greeks.rs  lib.rs
rust/corsair_risk/: Cargo.toml
rust/corsair_risk/src/: kill.rs  lib.rs  monitor.rs  sentinel.rs
rust/corsair_snapshot/src/: lib.rs  payload.rs  publisher.rs
rust/corsair_tick_replay/: Cargo.toml
rust/corsair_tick_replay/src/: main.rs
rust/corsair_trader/: Cargo.toml
rust/corsair_trader/benches/: decision_gates.rs
rust/corsair_trader/src/: decision.rs  jsonl.rs  lib.rs  main.rs  messages.rs  msgpack_decode.rs  msgpack_encode.rs  pricing.rs  state.rs  tte_cache.rs  types.rs
rust/perf_bench/: Cargo.toml
rust/perf_bench/src/: main.rs
scripts/: adverse_selection.py  amend_latency_probe.py  capture_place_order_bytes.py  capture_preempt_burst.sh  compare_latency.py  concurrency_sweep_probe.py  cut_over_preflight.py  dashboard.py  dashboard_chain.py  dashboard_style.py  flatten.py  flatten_hg.py  flatten_persistent.py  flatten_positions.py  gateway_run.sh  lint_pricing_args.sh  live_monitor.py  min_edge_experiment_comparison.py  mm_probe_v2_analysis.py  mm_response_probe.py  multi_amend_probe.py  multi_client_probe.py  parity_compare.py  run_ab_test.sh  run_latency_harness.sh  simulate_latency.py  wire_to_wire_histogram.py
scripts/archive/: README.md  _discover_si.py  _frmm_quote.py  _latency_quote_sample.py  _live_check.py  _si_option_sanity.py  behind_incumbent_distance.py  mm_probe_v2.py  mm_response_probe.py  nbbo_decay_analysis.py  regime_cycle_analysis.py  requote_cycle_analysis.py
src/: backmonth_surface.py  broker_ipc.py  config.py  connection.py  constraint_checker.py  daily_state.py  daily_summary.py  discord_notify.py  fill_handler.py  hedge_manager.py  ib_insync_patch.py  logging_utils.py  loop_block_detector.py  main.py  market_data.py  operational_kills.py  position_manager.py  pricing.py  quote_engine.py  risk_monitor.py  sabr.py  snapshot.py  synthetic_span.py  utils.py  watchdog.py  weekend.py
src/ipc/: protocol.py  shm.py
src/trader/: main.py  quote_decision.py
tests/: conftest.py  test_burst_detector.py  test_calibrate_parity.py  test_constraint_checker.py  test_hedge_manager.py  test_operational_kills.py  test_position_manager.py  test_risk_monitor.py  test_sabr.py  test_synthetic_span.py  test_thread3.py  test_watchdog.py
