[package]
name = "corsair_broker_ibkr"
version = "0.1.0"
edition = "2021"
description = "IBKR adapter for the corsair_broker_api Broker trait. Phase 2-5: bridges through Python ib_insync via PyO3. Phase 6+: native Rust IBKR API V100+ wire client (planned)."

[lib]
name = "corsair_broker_ibkr"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
corsair_broker_api = { path = "../corsair_broker_api" }
log = "0.4"
pyo3 = { version = "0.22" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
env_logger = "0.11"
