[package]
name = "corsair_oms"
version = "0.1.0"
edition = "2021"
description = "Minimal orderId → terminal-state cache for the v3 broker daemon."

[lib]
name = "corsair_oms"

[dependencies]
corsair_broker_api = { path = "../corsair_broker_api" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
