[package]
name = "corsair_pricing"
version = "0.1.0"
edition = "2021"

[lib]
name = "corsair_pricing"
crate-type = ["cdylib", "rlib"]

[features]
# `extension-module` is gated behind a feature so the workspace as a
# whole can be `cargo test`-ed without conflicting with crates that
# embed Python (e.g. corsair_broker_ibkr, which links libpython).
# Maturin opts into this feature when building the wheel.
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.22" }
statrs = "0.17"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
