[package]
name = "corsair_tick_replay"
version = "0.1.0"
edition = "2021"
description = "Synthetic tick replay harness — drives the trader from a JSONL recording so latency changes can be A/B'd against fixed input."

[[bin]]
name = "corsair_tick_replay"
path = "src/main.rs"

[dependencies]
corsair_ipc = { path = "../corsair_ipc" }
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "io-util"] }
log = "0.4"
env_logger = "0.11"
