[package]
name = "corsair_trader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "corsair_trader"
path = "src/main.rs"

# Library facade exists so `benches/*.rs` can reference pub items like
# `decision::compute_risk_gates` without `#[path]` indirection. The bin
# and lib compile the same source files independently — see src/lib.rs
# for the full rationale.
[lib]
name = "corsair_trader"
path = "src/lib.rs"

[[bench]]
name = "decision_gates"
harness = false

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "sync", "fs", "net", "signal"] }
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
nix = { version = "0.29", features = ["fs", "ioctl", "uio", "poll"] }
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
statrs = "0.17"
ahash = "0.8"
# p99-4 (2026-05-04): mimalloc as global allocator. rmp_serde decode +
# small-Vec churn on the hot path benefits from mimalloc's tighter
# tail-latency vs glibc malloc. ~100-300µs typical p99 reduction in
# allocation-heavy hot paths.
mimalloc = { version = "0.1", default-features = false }
# p99-1 (Priority 1 — 2026-05-04): lock-shard the heavy maps so the
# 10Hz staleness sweep and 10s telemetry sort don't block the hot
# loop on a single big mutex. DashMap shards by key hash; concurrent
# reads/writes to different shards don't contend. parking_lot::Mutex
# replaces std::sync::Mutex for the histogram + scalar locks — same
# API, brisker uncontended path.
dashmap = "6"
parking_lot = "0.12"
# Phase 5B.5: shared IPC implementation. The trader's local
# src/ipc/ module now re-exports from corsair_ipc so both broker
# and trader use one source of truth for the wire format.
corsair_ipc = { path = "../corsair_ipc" }

[dev-dependencies]
# Sub-µs gate-cost microbench (CLAUDE.md §21 / §25 follow-up). Criterion
# uses TSC-based sampling and statistical aggregation that resolves
# noise floors well below what the production replay harness can.
# Dev-dep only; no production image impact.
criterion = "0.5"

# [profile.release] removed — workspace root owns release profile.
